<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_map" translatable="false">Map</string>
    <string name="action_share">Share</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">40241,USA</string>

    <string name="pref_syncConnectionType">Units</string>
    <string name="pref_syncConnectionType_key" translatable="false">units</string>
    <string name="pref_syncConnectionTypes_default">Metric</string>
    <string-array name="pref_syncConnectionTypes_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_syncConnectionTypes_values">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>


</resources>
